# PaySphere

./: .dockerignore  .env.databricks  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.celery  IMPLEMENTATION_STATUS.md  SCHEMA_COVERAGE_RECONCILIATION.md  Untitled  docker-compose.nifi.yaml  docker-compose.yaml  pyproject.toml  requirements-test.txt  run_local_test.py  run_medallion_test.py
cdm/json-schemas/: audit_trail_schema.json  lineage_metadata_schema.json  payment_event_schema.json  payment_schema.json  settlement_schema.json
cdm/logical-model/: CDM_LOGICAL_MODEL.md  INDEX.yaml
config/: persistence.yaml
data/nifi_input/: BACS_562057.bacs  BOJNET_8E485764.json  CHAPS_B4CF40E1.mt  CHIPS_537702.json  CNAPS_1208EF9E.json  FPS_33038808.xml  FedNow_33038497.xml  Fedwire_33193278.fwt  InstaPay_FA4C457D.json  KFTC_A26D545E.json  MEPS_A4AE4184.mt  MT103_297C4797.mt  MT200_AAB54DF7.mt  MT202COV_C42B4620.mt  MT202_11E7475A.mt  MT900_156445EC.mt  MT910_9F7E483D.mt  MT940_1EB546C0.mt  MT950_C6704F83.mt  NACHA_ACH_H5847094.ach  NPP_33038663.xml  PIX_f056453a.json  PayNow_33038956.xml  PromptPay_5659429C.json  RTGS_HK_84D34DEF.mt  RTP_33038336.xml  SARIE_801CAACF.json  SEPA_SCT_33038995.xml  SEPA_SDD_33038707.xml  TARGET2_33038828.xml  UAEFTS_D3FA3479.json  UPI_4F63B725.json  acmt_001_33038411.xml  acmt_002_33038779.xml  acmt_003_33038613.xml  acmt_005_33038629.xml  acmt_006_33038374.xml  acmt_007_33038113.xml  camt_026_33038430.xml  camt_027_33038957.xml  (+23 more)
data/processed/: .gitkeep
data/raw/: .gitkeep
data/reference/: 00_master_load_reference_data.sql  01_load_relationship_to_beneficiary_codes.sql  02_load_regulatory_purpose_codes_china.sql  03_load_regulatory_purpose_codes_india.sql  04_load_regulatory_purpose_codes_brazil.sql  05_load_regulatory_purpose_codes_other_jurisdictions.sql  README.md
ddl/: 01_extend_party_entity.sql  02_extend_account_entity.sql  03_extend_regulatoryreport_entity.sql  04_extend_financialinstitution_entity.sql  05_extend_compliancecase_entity.sql  06_create_regulatorypurposecode_entity.sql  07_create_relationshiptobeneficiary_entity.sql  README.md
ddl/databricks/: 001_bronze_tables.sql  002_silver_tables.sql  002b_silver_tables_extended.sql  003_gold_cdm_tables.sql
ddl/postgresql/: 00_create_database.sql  01_bronze_tables.sql  02_silver_tables.sql  02b_silver_tables_extended.sql  03_gold_cdm_tables.sql  03b_gold_extension_tables.sql  04_analytical_tables.sql  04_gold_normalized_identifiers.sql  05_gold_reference_data_codes.sql  05_observability_tables.sql  06_auth_tables.sql  06_cdc_triggers.sql  06_silver_missing_columns.sql  07_exception_handling.sql  07_processing_errors.sql  08_zone_mappings.sql  09_kafka_checkpoints.sql  12_zone_separated_observability.sql  13_standard_field_mappings.sql  14_fix_mapping_paths.sql  15_camt053_gold_coverage.sql  15_complete_standard_fields.sql  16_chaps_extension_table.sql  20_format_inheritance.sql  21_iso20022_cdm_enhancements.sql  22_iso20022_identifier_tables.sql  25_base_format_mappings.sql  (+16 more)
docs/: COMPREHENSIVE_RECONCILIATION_MATRIX.md  E2E_ISSUES_AND_FIXES.md  EXCEPTION_HANDLING_PLAN.md  FIELD_COVERAGE_AUDIT_REPORT.md  GPS_CDM_REFACTORING_SUMMARY.md  ISO20022_Payment_Standards_Analysis.docx  ISO20022_STANDARDS_ADOPTION_REFERENCE.md  LEGACY_FORMAT_ISO_MAPPING_PLAN.md  MESSAGE_FORMAT_IMPLEMENTATION_BLUEPRINT.md  MESSAGE_FORMAT_PLAYBOOK.md  PHASE_1_CHECKPOINT.md  field_coverage_summary.txt  field_mapping_report.psv  schema_gap_analysis.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
nifi/: live_flow_export.json  zone_separated_flow.json
reference_data/: README.md  load_reference_data.sql  regulatory_purpose_codes_sample.csv  relationship_to_beneficiary_codes.csv
registry/: README.md
schemas/: 01_payment_instruction_complete_schema.json  02_party_complete_schema.json  03_account_complete_schema.json  04_financial_institution_complete_schema.json  05_regulatory_report_complete_schema.json  06_compliance_case_complete_schema.json  07_regulatory_purpose_code_schema.json  08_relationship_to_beneficiary_schema.json  payment_instruction_extensions_schema.json
scripts/: configure_nifi_flows.py  e2e_bulk_test.py  e2e_multi_record_test.py  fix_camt053_coverage.py  fix_camt053_gold_mappings.sql  generate_compliant_messages.py  generate_mappings_from_extractors.py  generate_test_messages.py  load_all_message_types_to_databricks.py  process_test_messages.py  setup_databricks_connection.py  setup_zone_topics.sh  validate_nifi_e2e.py  validate_zone_separated_e2e.py  verify_field_coverage.py
test_data/: ach_test_batch.txt  fedwire_compliant.json  mt103_compliant.json  mt103_test_batch.json  pacs.008_compliant.json  pain.001_compliant.json  pain.001_test_batch.json  process_all_test_files.py  process_test_files.py  rtp_test_batch.xml  sepa_test_batch.xml
tests/: __init__.py  conftest.py  test_all_message_parsers.py  test_all_messages_e2e.py  test_e2e_pipeline.py
(+541 files in other folders)
