[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gps-cdm"
version = "1.0.0"
description = "GPS Payments Common Domain Model for payment processing, regulatory reporting, and analytics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "GPS CDM Team", email = "gps-cdm@company.com" }
]
keywords = [
    "payments",
    "cdm",
    "iso20022",
    "swift",
    "regulatory",
    "compliance",
    "fincen",
    "austrac",
    "fatca",
    "crs",
    "data-lineage",
    "fraud-detection"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # API
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",

    # Database
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",

    # Databricks/Spark
    "databricks-sql-connector>=3.0.0",
    "delta-spark>=3.0.0",
    "pyspark>=3.5.0",

    # Neo4J
    "neo4j>=5.14.0",

    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",

    # Validation
    "jsonschema>=4.20.0",

    # XML/ISO 20022
    "lxml>=5.0.0",
    "xmltodict>=0.13.0",

    # Date/Time
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",

    # HTTP
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # Serialization
    "orjson>=3.9.0",

    # Logging
    "structlog>=23.2.0",

    # Configuration
    "python-dotenv>=1.0.0",

    # Task Queue
    "celery>=5.3.0",
    "redis>=5.0.0",

    # Monitoring
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.0",
    "faker>=22.0.0",

    # Type Checking
    "mypy>=1.7.0",
    "types-python-dateutil>=2.8.19",
    "types-pytz>=2023.3.1",

    # Linting/Formatting
    "ruff>=0.1.8",
    "black>=23.12.0",
    "isort>=5.13.0",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",

    # Pre-commit
    "pre-commit>=3.6.0",
]

dsl = [
    # DSL Parser
    "lark>=1.1.8",
    "antlr4-python3-runtime>=4.13.0",

    # Code Generation
    "jinja2>=3.1.2",
    "black>=23.12.0",
]

ml = [
    # ML/Fraud Detection
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",

    # Graph Analytics
    "networkx>=3.2.0",
    "igraph>=0.11.0",
]

[project.urls]
Documentation = "https://gps-cdm.company.com/docs"
Repository = "https://github.com/company/gps-cdm"
Changelog = "https://github.com/company/gps-cdm/blob/main/CHANGELOG.md"

[project.scripts]
gps-cdm = "gps_cdm.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/schemas",
    "/registry",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gps_cdm"]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=gps_cdm",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests", "docs"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["gps_cdm"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.coverage.run]
source = ["src/gps_cdm"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
